# chainmeta-core

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml
chainmeta/: __init__.py  db.py
dbmigration/: env.py
dbmigration/versions/: f1fa5e0da559_avoid_using_keyword_as_column_name.py
src/chainmeta/: __init__.py  artifact.py  db.py  metadata.py
src/chainmeta/config/: __init__.py
src/chainmeta/schema/: artifact_schema.json
tests/data/artifacts/: coinbase_sample_flattened.csv
tests/integration_tests/: test_e2e.py
